--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [oanda]
 account_id = 101-009-16192234-001
-access_token = 13119e1d27a977a7168c6e9bcff3eb82-56001a70928b83b850faeb17041b68c3
+access_token = 458a7407323db347e6ad7b9f1806869b-d3499a484d30fa70a1b59e8d17d2c839
 product_code = USD_JPY
 
 [db]
@@ -11,7 +11,7 @@ driver = sqlite3
 port = 8080
 
 [pytrading]
-trade_duration = 1m
+trade_duration = 5s
 back_test = True
 use_percent = 0.9
 past_period = 365
